start of vineland school board stuff

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -27,6 +27,7 @@
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                    <li class="link"><a href="../../../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
@@ -39,6 +40,7 @@
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                    <li class="link"><a href="../../../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
@@ -55,6 +57,7 @@
                 </div>
             </div>
         </div>
+
 
         <dialog id="myModal" class="modal">
 
