updates and tweaks to vineland school board stuff

--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -64,20 +64,8 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Robert A. Austino</h6>
-              <p>Austino has lengthy experience working in government as sheriff, but no direct experience as a commissioner. As per a campaign picture on his 
-              <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
-              seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
-              </p>
-              <p>              
-            When asked at Deerfield Day to clarify his agenda, policy positions, and comparing that to the incumbents he is challenging, Austino basically said (paraphrased): 
-            "My big thing is money and budget. The county is attempting to build 3 county parks when our budget is stretched. I helped run a budget for 15 years, so I will help bring 
-            fiscal responsibility to the board of commissioners." Be sure to check our 
-            <a href="https://www.informthevotenj.com/child_pages/cc-elections/cc_election_issues">county issues page</a> to get a more detailed look at what's going on in the county. 
-            Also, Austino and Capizola have openly supported the Harris/Walz 
-            ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
-            so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future.
-            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              <h6 class="page-title">Makema Douglas</h6>
+              Candidate Douglas is running for school board again this year.
               </p>
             </div>
           
@@ -106,7 +94,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.facebook.com/media/set/?set=a.107759325384112&type=3" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://www.facebook.com/Makema4VBOE" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
         <h4 class="sub-heading">Personal Agenda</h4>
             <div class="agenda-thesis">
