--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -19,15 +19,36 @@
                 <div>
                     <div>
                         <ul class="links">
-                            <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
-                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                            <li class="link"><a id="home" href="../../../index.html">Home</a></li>
+                            <div class="accordion">
+                                <input type="checkbox" name="accordion" id="first">
+                                <label for="first">Elections</label>
+                                <div class="nested-burger-links">
+                                    <li class="link"><a href="../../../child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_president_2024.html">US President</a></li>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <input type="checkbox" name="accordion" id="second">
+                                <label for="second">Issues</label>
+                                <div class="nested-burger-links">
+                                    <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/us_president_issues.html">President Issues</a></li>
+                                </div>
+                            </div>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
-                            <li class="link"><a href="../../../child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                            <li class="link"><a href="../../../child_pages/resources-archives-and-rabbit-holes.html">Extra Info</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
                             <li class="link"><a href="../../../child_pages/contact.html">Contact</a></li>
                         </ul>
@@ -55,14 +76,13 @@
     <div class="candidate-agenda">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+                <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">Previous Personal Campaign Site</a>
                 <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">Cape May County Democrats</a>
-                <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats</a>
+                <a href="https://www.facebook.com/damita.white.5" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 Interview on <a href="https://www.facebook.com/QBCSJ/videos/183645471369458" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
 
             </div>
-            <h4 class="sub-heading">individual agenda</h4>
+            <h4 class="sub-heading">*Prior* individual agenda</h4>
             <div class="agenda-thesis">
                 Wants to invest in our youth/education system by through:
                 <ul>
@@ -74,14 +94,16 @@
                     <li>Supports Planned Parenthood</li><a href="https://www.facebook.com/PPActionNJ/posts/pfbid0vtHxGAe1ct981usYYgJ1PPtAgbsaUMhbh2XF6sJzuUzw5cDJ1mLcR5AiyMvy1Ycjl" target="_blank" rel="noopener noreferrer" class="website-link">Reposted on Facebook</a>
                 </ul>
             </div>
+
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
             </div>
-            <h4 class="sub-heading">policy positions</h4>
+
+            <h4 class="sub-heading">*Prior* policy positions</h4>
             <div class="policy-positions">
                 Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
+
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Fifteen years experience in leadership roles with the Bridgeton School Employees Association, 
