--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_school_board_2024.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
@@ -171,7 +177,12 @@
                     <div class="elections-dropdown-links">
                         <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
                         <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
+                        <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a>
                         <a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a>
+                        <a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a>
+                        <a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a>
+                        <a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a>
+                        <a href="child_pages/cc-elections/lawrence_township_school_board_2024.html">Lawrence Township School Board</a>
                         <a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a>
                         <a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a>
                         <a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a>
