experience correction on whitakers page

--- a/child_pages/cc-elections/Candidates/whitaker.html
+++ b/child_pages/cc-elections/Candidates/whitaker.html
@@ -125,7 +125,8 @@
                       Graduated Rowan with a BS in Chemistry. A mother of 3. Vice president of the PTA in 2021, then as president for a partial term. Currently serving at the 
                       PTA treasurer. Worked for the township as Deputy Collector for 6 years. Has been deeply involved with the school while working full time. Appointed to an 
                       unfinished term on the school board in 2022. Has been asked to run for school board in the past and received many write-ins. Served on the Combining Committee
-                      in 2020 when Port Norris School shut down. Grew up in Maurice River and has lived there for the past 15 years. Recently had a children's book published.
+                      in 2020 when Port Norris School shut down. Grew up in Maurice River and has lived in Commercial Township for the past 15 years. Recently had a children's book 
+                      published.
                 </ul>
             </div>
             
