--- a/child_pages/cc-elections/Candidates/whitaker.html
+++ b/child_pages/cc-elections/Candidates/whitaker.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/whitaker.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
