--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/forkin.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
