--- a/child_pages/cc-elections/Candidates/whitaker.html
+++ b/child_pages/cc-elections/Candidates/whitaker.html
@@ -84,7 +84,7 @@
        <h2>Heather N. Whitaker</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">School Board</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/whitaker.jpg" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/whitaker.jfif" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
