corrected what theyre running for on candidate pages

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -82,7 +82,7 @@
        <h2>Carole E. Cossaboon</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">Millville City Commissioner</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
