--- a/child_pages/cc-elections/Candidates/menendez.html
+++ b/child_pages/cc-elections/Candidates/menendez.html
@@ -83,7 +83,7 @@
        <h2>Robert Menendez</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">U.S. Senate</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
