--- a/child_pages/cc-elections/Candidates/cannavo.html
+++ b/child_pages/cc-elections/Candidates/cannavo.html
@@ -82,7 +82,7 @@
        <h2>Thomas Cannavo</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">U.S. House of Representatives</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
