--- a/child_pages/cc-elections/Candidates/edwards.html
+++ b/child_pages/cc-elections/Candidates/edwards.html
@@ -82,7 +82,7 @@
        <h2>Dionne M. Edwards</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">Bridgeton School Board</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
