--- a/child_pages/cc-elections/Candidates/figueroa.html
+++ b/child_pages/cc-elections/Candidates/figueroa.html
@@ -82,7 +82,7 @@
        <h2>Kristen J. Figueroa</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">Lawrence  Township School Board</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
