--- a/child_pages/cc-elections/Candidates/rucker.html
+++ b/child_pages/cc-elections/Candidates/rucker.html
@@ -82,7 +82,7 @@
        <h2>Claude L. Rucker</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">President</div>
+            <div class="position">Fairfield Township School</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
