--- a/child_pages/cc-elections/Candidates/whitaker.html
+++ b/child_pages/cc-elections/Candidates/whitaker.html
@@ -84,7 +84,7 @@
        <h2>Heather N. Whitaker</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">School Board</div>
+            <div class="position">Commercial Township School Board</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
