--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -92,7 +92,7 @@
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>US HOUSE OF REPRESENTATIVES</h3>
+            <h3>Lawrence Township Committee</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
@@ -123,11 +123,11 @@
             <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
-                        <p>US House of Representatives</p>
+                        <p>Lawrence Township Committee</p>
                         <p>Vote for One</p>
                     </div>
                     <div class="ot-espanol">
-                        <p>Congresista US</p>
+                        <p>Comité del municipio de Lawrence</p>
                         <p>Vota por Uno</p>
                     </div>
                 </div>
@@ -193,11 +193,11 @@
                         <div class="state-senator row">
                             <div class="office-title">
                                 <div class="ot-english">
-                                    <p>US House of Representatives</p>
+                                    <p>Lawrence Township Committee</p>
                                     <p>Vote for One</p>
                                 </div>
                                 <div class="ot-espanol">
-                                    <p>Congresista</p>
+                                    <p>Comité del municipio de Lawrence</p>
                                     <p>Vota por Uno</p>
                                 </div>
                             </div>
@@ -207,7 +207,7 @@
                                         <p>Republican</p> 
                                     </div>
                                     <div class="first-name">
-                                        <a href="Candidates/van_drew.html">Jeff</a>
+                                        <a href="Candidates/woody.html">Charlie N.</a>
                                     </div>
                                     <div class="number-a-and-circle"> 
                                         <p>1A</p>
@@ -216,7 +216,7 @@
                                 </div>
                                 <div class="a-row-2">
                                     <div class="last-name push-down-last-name">
-                                        <a href="Candidates/van_drew.html">Van Drew</a>
+                                        <a href="Candidates/woody.html">Woody</a>
                                     </div>
                                 </div>
             
