ballot labeling fixed

--- a/child_pages/cc-elections/cc_vice_president_2024.html
+++ b/child_pages/cc-elections/cc_vice_president_2024.html
@@ -119,11 +119,11 @@
             <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
-                        <p>US President</p>
+                        <p>US Vice President</p>
                         <p>Vote for One</p>
                     </div>
                     <div class="ot-espanol">
-                        <p>Presidente</p>
+                        <p>Vicepresidenta</p>
                         <p>Vota por Uno</p>
                     </div>
                 </div>
@@ -187,11 +187,11 @@
                 <div class="state-senator row">
                     <div class="office-title">
                         <div class="ot-english">
-                            <p>US President</p>
+                            <p>US Vice President</p>
                             <p>Vote for One</p>
                         </div>
                         <div class="ot-espanol">
-                            <p>Presidente</p>
+                            <p>Vicepresidenta</p>
                             <p>Vota por Uno</p>
                         </div>
                     </div>
@@ -257,11 +257,11 @@
                     <div class="state-senator row">
                         <div class="office-title">
                             <div class="ot-english">
-                                <p>US President</p>
+                                <p>US Vice President</p>
                                 <p>Vote for One</p>
                             </div>
                             <div class="ot-espanol">
-                                <p>Presidente</p>
+                                <p>Vicepresidenta</p>
                                 <p>Vota por Uno</p>
                             </div>
                         </div>
