--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -68,7 +68,7 @@
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary button</h4>
-          <h6 class="page-title">County Commissioner</h6>
+          <h6 class="page-title">Millville City Commissioners</h6>
           <p>
           </p>
         </div>
@@ -88,7 +88,7 @@
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>COUNTY COMMISSIONERS</h3>
+            <h3>MILLVILLE CITY COMMISSIONERS</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
@@ -121,7 +121,7 @@
             <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
-                        <p>County Commissioners</p>
+                        <p>Millville City Commissioners</p>
                         <p>Vote for Two</p>
                     </div>
                     <div class="ot-espanol">
@@ -192,7 +192,7 @@
                 <div class="state-senator row">
                     <div class="office-title">
                         <div class="ot-english">
-                            <p>County Commissioners</p>
+                            <p>Millville City Commissioners</p>
                             <p>Vote for Two</p>
                         </div>
                         <div class="ot-espanol">
