--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -88,7 +88,7 @@
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>US SENTATE</h3>
+            <h3>US SENATE</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
