burger menus updated

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -33,6 +33,12 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                 <li class="link"><a href="cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="cc-elections/vsb_2024.html">Vineland School Board</a></li>
                                 <li class="link"><a href="cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
