--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -119,7 +119,7 @@
                     <li>Opposes DEI 
                         <details>
                             <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <img src="../../../assets/screenshots/forkinOpposesDEI.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:200px;">
+                            <img src="../../../assets/screenshots/forkinOpposesDEI.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
                         </details>
                     </li>
 
