updated capizola austion and riley agendas and summaries

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -74,7 +74,8 @@
               <h6 class="page-title">Robert A. Austino</h6>
               <p>Austino has lengthy experience working in government as sheriff, but no direct experience as a commissioner. As per a campaign picture on his 
               <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
-              seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
+              seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. Additionally, on August 13th 
+              he posted on facebook with details saying he will promote economic growth, public safety, and infrastructure improvement.
               </p>
               <p>              
             When asked at Deerfield Day to clarify his agenda, policy positions, and comparing that to the incumbents he is challenging, Austino basically said (paraphrased): 
@@ -120,9 +121,22 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                As of 8/1/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. In regards to his specific agenda, there only seems 
-                to be a campaign picture on his <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, which states he plans 
-                to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements.
+                <p>Current Agenda per facebook post</p>
+                <ul>
+                    <li>Economic growth by promoting local businesses and job creation</li>
+                    <li>Public safety by enhancing resources for law enforcement and emergency services</li>
+                    <li>Infrastructure improvement by upgrading roads, bridges, and public facilities/li>
+                    <li>
+                        <details>
+                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                        </details>
+                    </li>
+                    <li>Improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements
+                        <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a>
+                    </li>
+                </ul>
             </div>
 
             <br>
