--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -74,10 +74,8 @@
               <p>Current County Clerk Celeste Riley is running for re-election this year. She is currently serving her second term, which means she inherently has more 
                 experience in this position than her Republican challenger, Commissioner Lods. She was an Assemblywoman in the 3rd district, having won re-election for 
                 that position, and served several committee positions during her tenure in that position. She has served as both a Bridgeton City Council member and the 
-                Bridgeton City Council president. Like many candidates, Celeste does seem like a strong general political candidate, but it is not clear how her qualifications 
-                and prior agendas directly relate to the role of County Clerk, other than she is on her 2nd term. This makes it difficult to fully assess specific choices 
-                on the ballot, especially when comparing her to another candidate, a Commissioner with lots of political experience, who might be equally or better qualified, 
-                or who might have a preferable current agenda. We have reached out to her for clarifications and comparisons via official government email, but have not 
+                Bridgeton City Council president. A facebook post on August 13th states that her agenda will include streamlining county services, implementing transparency 
+                and accountability, and implementing community engagement. We have reached out to her for clarifications and comparisons via official government email, but have not 
                 received a response. Click the x at the top red of this box to go back to the page.
               </p>
             </div>
@@ -111,10 +109,24 @@
             <a href="https://www.cityofbridgetonnj.gov/191/Celeste-Riley" target="_blank" rel="noopener noreferrer" class="website-link">City of Bridgeton Site</a>
         </div>
 
-        <h4 class="sub-heading">*PRIOR Agendas*</h4>
+        <h4 class="sub-heading">Agenda</h4>
             <div class="agenda-thesis">
-                As of 8/1/2024, we have scoured the internet and attempted to contact Riley multiple times with no response. It is unclear what her current agenda is, but we might infer the 
-                following from previous agendas and accomplishments:
+                <p>Current Agenda per facebook post</p>
+                <ul>
+                    <li>Streamline services to make them more accessible and efficient</li>
+                    <li>Transparency and accountability to ensure open and honest communication with the public</li>
+                    <li>Community engagement through active listening and addressing the needs of residents</li>
+                    <li>
+                        <details>
+                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                        </details>
+                    </li>
+                </ul>
+                
+                
+                <p>PRIOR Agendas</p>
                 <ul>
                     <li>Investing in Higher Education to promote economic development</li>
                     <li>Bringing jobs to high-unemployment areas</li>
