--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -73,13 +73,14 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">John P. Capizola, Jr.</h6>
               <p>Former Commissioner Capizola is a democrat with approximately one year of experience serving as a 
-                commissioner. Some quick points of note are that he seems to have a moderate stance on gun control, supports armed security in schools, and supported 
+                commissioner. Some quick points of note are that he seems to have a moderate stance on gun control, supports armed security in schools, and he supported 
                 the middle mile broadband grant. He also has spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency 
                 and communication between the government and constituents. In terms of specific agenda should he get elected, his focus seems to be to improve roads/infrastructure/broadband, 
                 to support senior housing and healthcare, and to provide recreational advancements. 
                 <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a>. Also, Austino and Capizola have openly supported the Harris/Walz 
                 ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
-                so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. Click the red x at the top of this box and then 
+                so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. There was also a facebook post on August 13th which 
+                additionally states his agenda will include educational excellence, environmental sustainability, and fiscal responsibility. Click the red x at the top of this box and then 
                 scroll down down for more in-depth information and sources.
               </p>
             </div>
@@ -115,9 +116,22 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                As of 8/1/2024, Inform the Vote has scoured the internet and attempted to contact the former Commissioner multiple times. In terms of specific agenda, there only 
-                seems to be a campaign picture on his <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a> regarding 
-                improving roads/infrastructure/broadband, supporting senior housing and healthcare, and providing recreational advancements.
+                <p>Current Agenda per facebook post</p>
+                <ul>
+                    <li>Educational excellence by supporting schools and providing lifelong learning opportunities</li>
+                    <li>Environmental sustainability by protecting our natural resources for future generations</li>
+                    <li>Fiscal responsibility by ensuring efficient use of taxpayer dollars</li>
+                    <li>
+                        <details>
+                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                        </details>
+                    </li>
+                    <li>Improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements
+                        <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a>
+                    </li>
+                </ul>
             </div>
 
             <br>
