van drew page update

--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -111,6 +111,7 @@
         <h4 class="sub-heading">Website</h4>
         <div class="website">
             <a href="https://vandrew.house.gov/" target="_blank" rel="noopener noreferrer" class="website-link">Government Website</a>
+            <a href="https://vandrewforcongress.com/" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Website</a>
             <a href="https://www.facebook.com/CongressmanJVD/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://www.instagram.com/jeffvandrew/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
             <a href="https://twitter.com/Congressman_JVD" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
@@ -121,7 +122,7 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                <p><a href="https://joesalernoforcongress.com/priorities/" target="_blank" rel="noopener noreferrer" class="website-link">Priorities page from personal site</a></p>
+                
                 <br>
                 <ul>
                     <li>Focus on bringing economic growth and good jobs to South Jersey​.</li>
