updated forkin page based on text message communications

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -73,13 +73,14 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Thomas J. Forkin</h6>
               <p>
-                After contacting Mr. Forkin in regards to providing information regarding his relevant bio and resume, his agenda, his policy positions on issues, and how he compares 
-                to the other candidates, we were told that info is on his <a href="https://www.facebook.com/tjforkin">Facebook Page</a>. After reviewing the page, we can see he has a 
-                well rounded resume including experience in politics and business and he is Republican/supports conservative values.  We can also see some things that might be related 
-                to the specific position he is running for, including opposing Drag Queen Reading Hour, opposing DEI, a general disliking of the Department of Education, and supporting 
-                fairness in women's sports. 
-                Overall, while we appreciate the communication and the suggestion to review his facebook, this leaves many unanswered questions regarding the specifics of a campaign related 
-                to a specific school board position. Hopefully some more specifics will be provided in the future.
+                Mr. Forkin has a well rounded resume including experience in politics and business, and he is Republican/supports conservative values.  While directly communicating with him
+                we have learned that his specific agenda relates to establishing prudent line item spending with the school budget, scaffolding continuing educational development, and continuing 
+                to educate the other board members on how to save resources for the taxpayers in relation to legal issues. He also referred us to his facebook page, where we can also see some things 
+                that might be related, including opposing Drag Queen Reading Hour, opposing DEI, a general disliking of the Department of Education, preventing cell phone use in 
+                classrooms, and supporting fairness in women's sports. 
+                <br>
+                Click the red x at the top of this box and then 
+                scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
@@ -115,6 +116,16 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
+
+                <p>Agenda taken from direct communication with Mr. Forkin</p>
+                <ul>
+                    <li>Establish prudent line item analysis on spending</li>
+                    <li>Scaffold continuing educational development pursuant with State and Core Curriculum</li>
+                    <li>Continue to try to educate the other board members and the public on the pertinent legal issues and methods for saving resources for the taxpayers</li>
+                </ul>
+
+
+                <p>Agenda gleaned from Facebook</p>
                 <ul>
                     <li>Opposes Drag Queen Reading Hour <a href="https://www.facebook.com/tjforkin/posts/pfbid0aajgvAdG2v91heHaKq8LEwawfLdTuNLjwAmt853BrWuuTLBPmeNZrYpFvdouHWBCl?rdid=ZfrNm33kj6hgemO8">Facebook Post</a></li>
                     <li>Supports banning of cellphones in classrooms 
@@ -159,12 +170,26 @@
             <br>
             <br>
 
+            <h4 class="sub-heading">Partial Voting Record</h4>
+            <div class="experience">
+                <ul>
+                    <li>Voted against a school tax increase because "it was unneeded with ample funds in reserve."</li>
+                    <li>Voted against the sale of Historic Port Norris school without deed restrictions or a reverter clause</li>
+                </ul>
+            </div>
+
+            <br>
+            <br>
+
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 <ul>
                       <li>Attorney/Educator</li>
                       <li>Present township board member</li>
+                      <li>Professor of Law at ACIT and Stockton</li>
                       <li>Volunteer Fireman in Mauricetown</li>
+                      <li>Former Assistant City Solicitor for Atlantic City</li>
+                      <li>Former Police Legal Advisor for Atlantic City</li>
                       <li>Former Asst. City Attorney for Atlantic City</li>
                       <li>Former Arts Commissioner for Atlantic City</li>
                       <li>Former Alcohol Beverage Control Board Chairman For Atlantic City</li>
