--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -85,6 +85,9 @@
                 Looking ahead to the 2024 election season, Van Drew aims to continue his advocacy for economic opportunities and job creation in South Jersey. His agenda 
                 focuses on lowering energy costs, maintaining fiscal responsibility, and opposing policies he views as socialist. He emphasizes his dedication to serving 
                 his constituents by addressing their concerns and promoting policies that benefit the local economy and community well-being.
+                <br>
+                Click the red x at the top of this box and then 
+                scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
