--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -114,58 +114,62 @@
         <br>
         <br>
 
-        <h4 class="sub-heading">individual agenda</h4>
-            <div class="agenda-thesis">
+        <div class="container">
+            <div class="main-content-box-with-shadow-gi">
+                <h4 class="sub-heading">individual agenda</h4>
+                    <div class="agenda-thesis">
 
-                <p>Agenda taken from direct communication with Mr. Forkin</p>
-                <ul>
-                    <li>Establish prudent line item analysis on spending</li>
-                    <li>Scaffold continuing educational development pursuant with State and Core Curriculum</li>
-                    <li>Continue to try to educate the other board members and the public on the pertinent legal issues and methods for saving resources for the taxpayers</li>
-                </ul>
+                        <p>Agenda taken from direct communication with Mr. Forkin</p>
+                        <ul>
+                            <li>Establish prudent line item analysis on spending</li>
+                            <li>Scaffold continuing educational development pursuant with State and Core Curriculum</li>
+                            <li>Continue to try to educate the other board members and the public on the pertinent legal issues and methods for saving resources for the taxpayers</li>
+                        </ul>
 
 
-                <p>Agenda gleaned from Facebook</p>
-                <ul>
-                    <li>Opposes Drag Queen Reading Hour <a href="https://www.facebook.com/tjforkin/posts/pfbid0aajgvAdG2v91heHaKq8LEwawfLdTuNLjwAmt853BrWuuTLBPmeNZrYpFvdouHWBCl?rdid=ZfrNm33kj6hgemO8">Facebook Post</a></li>
-                    <li>Supports banning of cellphones in classrooms 
-                        <details>
-                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/forkinSupportsNoCellphonesInSchools.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                        </details>
-                    </li>
-                    <li>Opposes DEI 
-                        <details>
-                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/forkinOpposesDEI.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                        </details>
-                    </li>
-                    <li>General dislike of the Department of Education 
-                        <details>
-                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/forkinDislikesDOE.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                        </details>
-                    </li>
-                    <li>Supports fairness in women's sports 
-                        <details>
-                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/forkinSupportsFairnessInWomensSports.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                        </details>
-                    </li>
-                    <li>Supports local Republicans
-                        <details>
-                            <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/forkinSupportsTeamTesta.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                        </details>
-                    </li>
-                </ul>
+                        <p>Agenda gleaned from Facebook</p>
+                        <ul>
+                            <li>Opposes Drag Queen Reading Hour <a href="https://www.facebook.com/tjforkin/posts/pfbid0aajgvAdG2v91heHaKq8LEwawfLdTuNLjwAmt853BrWuuTLBPmeNZrYpFvdouHWBCl?rdid=ZfrNm33kj6hgemO8">Facebook Post</a></li>
+                            <li>Supports banning of cellphones in classrooms 
+                                <details>
+                                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/forkinSupportsNoCellphonesInSchools.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                                </details>
+                            </li>
+                            <li>Opposes DEI 
+                                <details>
+                                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/forkinOpposesDEI.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                                </details>
+                            </li>
+                            <li>General dislike of the Department of Education 
+                                <details>
+                                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/forkinDislikesDOE.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                                </details>
+                            </li>
+                            <li>Supports fairness in women's sports 
+                                <details>
+                                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/forkinSupportsFairnessInWomensSports.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                                </details>
+                            </li>
+                            <li>Supports local Republicans
+                                <details>
+                                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                                    <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                                    <img src="../../../assets/screenshots/forkinSupportsTeamTesta.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                                </details>
+                            </li>
+                        </ul>
                     
-            </div>
+                    </div> <!--end of agenda thesis-->
+            </div> <!--end of main-content-box-with-shadow-gi-->
+        </div> <!--end of container-->
 
             <br>
             <br>
