forkin style test with shadow boxes 2

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -105,19 +105,23 @@
     <div class="candidate-pic-box">
         <img class="cover" src="../../../assets/candidates/forkin.jpg" class="candidate-pic">
     </div>
-    <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
-        <div class="website">
-            <a href="https://www.facebook.com/tjforkin">Facebook Page</a>
-        </div>
 
-        <br>
-        <br>
 
-        <div class="container">
-            <div class="main-content-box-with-shadow-gi">
+    <div class="container">
+        <div class="main-content-box-with-shadow-gi">
+            <div class="candidate-agenda">
+                <h4 class="sub-heading">Website</h4>
+                <div class="website">
+                    <a href="https://www.facebook.com/tjforkin">Facebook Page</a>
+                </div>
+
+                <br>
+                <br>
+
+        
                 <h4 class="sub-heading">individual agenda</h4>
-                    <div class="agenda-thesis">
+                    <div class="get-involved-intro-content">
+                    <!-- <div class="agenda-thesis"> -->
 
                         <p>Agenda taken from direct communication with Mr. Forkin</p>
                         <ul>
