further forking page style testing

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -111,7 +111,8 @@
             <div class="main-content-box-with-shadow-gi">
                 <div class="candidate-agenda">
                     <h4 class="sub-heading">Website</h4>
-                    <div class="website">
+                    <!-- <div class="website"> -->
+                    <div class="get-involved-intro-content">
                         <a href="https://www.facebook.com/tjforkin">Facebook Page</a>
                     </div>
 
@@ -120,7 +121,8 @@
 
             
                     <h4 class="sub-heading">individual agenda</h4>
-                        <div class="agenda-thesis">
+                        <!-- <div class="agenda-thesis"> -->
+                        <div class="get-involved-intro-content">
 
                             <h5>Agenda taken from direct communication with Mr. Forkin</h5>
 
@@ -177,7 +179,8 @@
                         <br>
 
                         <h4 class="sub-heading">Partial Voting Record</h4>
-                        <div class="experience">
+                        <!-- <div class="experience"> -->
+                        <div class="get-involved-intro-content">
                             <ul>
                                 <li>Voted against a school tax increase because "it was unneeded with ample funds in reserve."</li>
                                 <li>Voted against the sale of Historic Port Norris school without deed restrictions or a reverter clause</li>
@@ -188,7 +191,8 @@
                         <br>
 
                         <h4 class="sub-heading">experience</h4>
-                        <div class="experience">
+                        <!-- <div class="experience"> -->
+                        <div class="get-involved-intro-content">
                             <ul>
                                 <li>Attorney/Educator</li>
                                 <li>Present township board member</li>
