body color change test on forkin page

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -10,7 +10,7 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
-    <body>
+    <body style="background-color: #e0f7fa;">
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -132,8 +132,10 @@
                                 <li>Continue to try to educate the other board members and the public on the pertinent legal issues and methods for saving resources for the taxpayers</li>
                             </ul>
 
+                            <br>
+                            <br>
 
-                            <p>Agenda gleaned from Facebook</p>
+                            <h5>Agenda gleaned from Facebook</h5>
                             <ul>
                                 <li>Opposes Drag Queen Reading Hour <a href="https://www.facebook.com/tjforkin/posts/pfbid0aajgvAdG2v91heHaKq8LEwawfLdTuNLjwAmt853BrWuuTLBPmeNZrYpFvdouHWBCl?rdid=ZfrNm33kj6hgemO8">Facebook Post</a></li>
                                 <li>Supports banning of cellphones in classrooms 
