--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -10,7 +10,7 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
-    <body style="background-color: #e0f7fa;">
+    <body style="background-color: #BF1B2D;">
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -107,7 +107,7 @@
         </div>
 
 
-        <div class="container">
+        <div class="container" style="background-color: #1452FF;">
             <div class="main-content-box-with-shadow-gi">
                 <div class="candidate-agenda">
                     <h4 class="sub-heading">Website</h4>
