forkin color changes 3

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -10,7 +10,7 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
-    <body style="background-color: #BF1B2D;">
+    <body style="background-color: #b22222;">
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -107,12 +107,12 @@
         </div>
 
 
-        <div class="container" style="background-color: #1452FF;">
-            <div class="main-content-box-with-shadow-gi">
+        <div class="container">
+            <div class="main-content-box-with-shadow-gi"  style="background-color: #000080;">
                 <div class="candidate-agenda">
                     <h4 class="sub-heading">Website</h4>
                     <!-- <div class="website"> -->
-                    <div class="get-involved-intro-content">
+                    <div class="get-involved-intro-content" style="background-color: #F8F8FF;">
                         <a href="https://www.facebook.com/tjforkin">Facebook Page</a>
                     </div>
 
@@ -122,7 +122,7 @@
             
                     <h4 class="sub-heading">individual agenda</h4>
                         <!-- <div class="agenda-thesis"> -->
-                        <div class="get-involved-intro-content">
+                        <div class="get-involved-intro-content"  style="background-color: #F8F8FF;">
 
                             <h5>Agenda taken from direct communication with Mr. Forkin</h5>
 
@@ -182,7 +182,7 @@
 
                         <h4 class="sub-heading">Partial Voting Record</h4>
                         <!-- <div class="experience"> -->
-                        <div class="get-involved-intro-content">
+                        <div class="get-involved-intro-content"  style="background-color: #F8F8FF;">
                             <ul>
                                 <li>Voted against a school tax increase because "it was unneeded with ample funds in reserve."</li>
                                 <li>Voted against the sale of Historic Port Norris school without deed restrictions or a reverter clause</li>
@@ -194,7 +194,7 @@
 
                         <h4 class="sub-heading">experience</h4>
                         <!-- <div class="experience"> -->
-                        <div class="get-involved-intro-content">
+                        <div class="get-involved-intro-content"  style="background-color: #F8F8FF;">
                             <ul>
                                 <li>Attorney/Educator</li>
                                 <li>Present township board member</li>
