--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -10,7 +10,7 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
-    <body style="background-color: linear-gradient(135deg, #ff7f7f, #b22222)">
+    <body style="background-color: #b22222;">
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -90,7 +90,7 @@
 
     <div class="container">
 
-        <div class="main-content-box-with-shadow-gi"  style="background-color: linear-gradient(45deg, #007bff, #00d2ff)">
+        <div class="main-content-box-with-shadow-gi"  style="background-color: #000080;">
             <button class="quick-summary-reopen">quick summary</button>
 
             <div class="get-involved-intro-content" style="background-color: #F8F8FF;">
@@ -112,7 +112,7 @@
         </div>
 
         <div class="container">
-            <div class="main-content-box-with-shadow-gi"  style="background-color: linear-gradient(45deg, #007bff, #00d2ff)">
+            <div class="main-content-box-with-shadow-gi"  style="background-color: #000080;">
                 <div class="candidate-agenda">
                     <h4 class="sub-heading">Website</h4>
                     <!-- <div class="website"> -->
