second run of candidate page redesign

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -106,14 +106,23 @@
     </div>
     <div class="candidate-pic-box">
         <img class="cover" src="../../../assets/candidates/austino.jpg" class="candidate-pic">
+        <div class="candidate-pic-box-content">
+            <h4 class="sub-heading">Website</h4>
+            <div class="website">
+                <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Democrats Site</button></a>
+                <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
+            </div>
+            <h4 class="sub-heading">What does a commissioner do?</h4>
+            <div class="job-description can-sec">
+                Bacon ipsum dolor amet brisket pork loin biltong, boudin jerky pastrami hamburger sausage. Shoulder shankle 
+                cupim chicken, pastrami ham hock beef ribs. Brisket beef ribs sausage ham hock flank beef andouille short ribs 
+                frankfurter kielbasa chislic. Landjaeger pork chop shank, drumstick strip steak tri-tip leberkas pancetta 
+                capicola sirloin ground round. Pork belly pork venison beef ribs.
+            </div>
+        </div>
     </div>
     <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
-        <div class="website">
-            <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Democrats Site</button></a>
-            <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
-        </div>
 
         <br>
         <br>
